syntax = "proto3";

import "KeyPoint.proto";
import "CameraModel.proto";
import "Session.proto";
import "Descriptor.proto";
package proto;

message WordMessage {
  repeated int32 wordIds = 1;
  repeated KeyPoint keyPoints = 2;
  repeated Descriptor descriptors = 3;
  CameraModel cameraModel = 4;
  Session session = 5;
}
